--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>test</title>
 </head>
 <body>
- <h1>MORINGA</h1>
+ <h1>Microsoft</h1>
  <h5>Discover . Grow .Transform</h5>
  <h2>We Are Empowering</h2>
      <p>we provide practical,applicable skills for the marketplace to<br>
@@ -16,4 +16,4 @@
                            education
      </p>
 </body>
-</html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+</html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                    git 
